--- a/package.json
+++ b/package.json
@@ -1,54 +1,49 @@
 {
-  "author": "Edward Hotchkiss <edward@edwardhotchkiss.com>",
-  "name": "mongoose-paginate",
-  "description": "Plugin for Mongoose schemas to easily add paginated queries and results",
-  "version": "4.2.0",
-  "contributors": [
-    {
-      "name": "Edward Hotchkiss",
-      "email": "edward@edwardhotchkiss.com"
+    "author": "Edward Hotchkiss <edward@edwardhotchkiss.com>",
+    "name": "mongoose-paginate",
+    "description": "Plugin for Mongoose schemas to easily add paginated queries and results",
+    "version": "4.2.0",
+    "contributors": [{
+        "name": "Edward Hotchkiss",
+        "email": "edward@edwardhotchkiss.com"
+    }, {
+        "name": "Nick Baugh",
+        "email": "niftylettuce@gmail.com"
+    }],
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/edwardhotchkiss/mongoose-paginate.git"
     },
-    {
-      "name": "Nick Baugh",
-      "email": "niftylettuce@gmail.com"
+    "bugs": {
+        "url": "https://github.com/edwardhotchkiss/mongoose-paginate/issues"
+    },
+    "homepage": "http://github.com/edwardhotchkiss/mongoose-paginate/",
+    "keywords": [
+        "mongoose",
+        "paginate",
+        "sort",
+        "results",
+        "page",
+        "populate"
+    ],
+    "engines": {
+        "node": ">=0.10.0"
+    },
+    "dependencies": {
+        "async": "~1.4.2",
+        "bluebird": "~2.9.34"
+    },
+    "main": "./lib/mongoose-paginate",
+    "licenses": [{
+        "type": "MIT",
+        "url": "http://github.com/edwardhotchkiss/mongoose-paginate/LICENSE"
+    }],
+    "scripts": {
+        "test": "./node_modules/.bin/vows test/*.test.js --spec --isolate"
+    },
+    "devDependencies": {
+        "vows": "^0.8.1",
+        "chai": "^3.2.0",
+        "mongoose": "~4.1.3"
     }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/edwardhotchkiss/mongoose-paginate.git"
-  },
-  "bugs": {
-    "url": "https://github.com/edwardhotchkiss/mongoose-paginate/issues"
-  },
-  "homepage": "http://github.com/edwardhotchkiss/mongoose-paginate/",
-  "keywords": [
-    "mongoose",
-    "paginate",
-    "sort",
-    "results",
-    "page",
-    "populate"
-  ],
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "dependencies": {
-    "async": "~1.4.2",
-    "bluebird": "~2.9.34",
-    "mongoose": "~4.1.3"
-  },
-  "main": "./lib/mongoose-paginate",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://github.com/edwardhotchkiss/mongoose-paginate/LICENSE"
-    }
-  ],
-  "scripts": {
-    "test": "./node_modules/.bin/vows test/*.test.js --spec --isolate"
-  },
-  "devDependencies": {
-    "vows": "^0.8.1",
-    "chai": "^3.2.0"
-  }
 }
